<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mealplandisplay.MealPlanDisplay">

    <TextView
        android:id="@+id/tv_meal_plan_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_cuisines_title"
        app:layout_constraintTop_toBottomOf="@id/tv_meal_plan_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/cuisines" />

    <ListView
        android:id="@+id/lv_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_cuisines_title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_scheduler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        app:layout_constraintTop_toBottomOf="@id/lv_recipes"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:textSize="16dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_scheduler_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_scheduler"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/set_meal_plan_for"
        android:layout_marginLeft="16dp" />


    <TextView
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:clickable="true"
        android:text="@string/click_date"
        android:textColor="@color/colorPrimary"
        android:focusable="false"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/tv_scheduler_desc" />

    <Button
        android:id="@+id/bt_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/colorPrimary"
        android:background="#ffffff"
        android:text="@string/set_reminder"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="time"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        android:focusable="false"
        android:text="@string/click_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_date"/>

</androidx.constraintlayout.widget.ConstraintLayout>