<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="recipe"
            type="id.ac.ui.cs.mobileprogramming.marcokenata.resi_me.data.network.response.Meals" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.congratulations.Congratulations">

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20dp"
        android:text="@string/congratulations"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_you_made"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/successfully_made"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_congratulations" />

    <TextView
        android:id="@+id/tv_strMeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{recipe.strMeal}"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_you_made" />

    <ImageView
        android:id="@+id/iv_display_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:congratulationsImage="@{recipe.strMealThumb}"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_strMeal" />


    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_recipe"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_back"
        app:layout_constraintTop_toBottomOf="@id/iv_display_image" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/back_to_menu"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_save"
        app:layout_constraintTop_toBottomOf="@id/iv_display_image"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>