<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="random"
            type="id.ac.ui.cs.mobileprogramming.marcokenata.resi_me.data.network.response.Meals" />
        <variable
            name="viewmodel"
            type="id.ac.ui.cs.mobileprogramming.marcokenata.resi_me.ui.homeview.HomeViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.homeview.Home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_top_recipes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_card_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="16sp"
        android:text="@string/top_recipes" />

    <TextView
        android:id="@+id/tv_faq"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="16sp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="30dp"
        android:textColor="@color/colorPrimary"
        android:text="faq"/>


        <ImageView
            android:id="@+id/iv_card_view"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_top_recipes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="200dp"
            android:layout_width="0dp"
            app:cardViewImage="@{random.strMealThumb}"
            />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/iv_card_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tv_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_bold"
            android:text="@{random.strMeal, default=Loading}"
            android:textColor="@color/colorPrimary" />


    <TextView
        android:id="@+id/tv_popular_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/popular_recipes"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_card_view" />

    <TextView
        android:id="@+id/tv_no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/no_connection"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <GridView
        android:id="@+id/gv_categories"
        android:numColumns="3"
        app:layout_constraintTop_toBottomOf="@id/tv_popular_recipes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="600dp" />

    <TextView
        android:id="@+id/tv_timer"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/gv_categories"
        android:text="Timer"

        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_minutes"
        app:layout_constraintTop_toBottomOf="@id/tv_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="minutes"
        android:textSize="16dp"
        android:inputType="number"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_seconds" />

    <EditText
        android:id="@+id/et_seconds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:hint="seconds"
        android:textColor="@color/colorPrimary"
        android:inputType="number"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_timer"
        app:layout_constraintLeft_toRightOf="@id/et_minutes"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/bt_timer_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        android:textColor="@color/colorPrimary"
        android:text="start timer"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/et_seconds"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>